# postcode-accident-index

./: .gitignore  README.md  pyproject.toml
config/: model.yaml
scripts/: clean_raw.py  evaluation.py  make_features.py  make_group_estimator_data.py
src/api/clients/: postcodes_io.py
src/model/: random_forest.py
src/utils/: config.py  log.py  metrics.py
src/viz/: __init__.py  general.py
